--- a/changelog.txt
+++ b/changelog.txt
@@ -1,2 +1,5 @@
+Release 1.1.6 26/01/2016
+ - [AD] Fixed examples and index, updated library with setLocale
+
 Release 1.1.5 25/01/2016
  - [AD] Fixed examples and index, updated library with setLocale
