--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+Release 1.1.7 22/02/2016
+ - [AD] Added carrier translation
+ 
 Release 1.1.6 26/01/2016
  - [AD] Fixed examples and index, updated library with setLocale
 
