--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+Release 1.3.0 12/04/2016
+ - [AD] API to 1.3.0 (for parcel points details in quotations)
+ 
 Release 1.2.0 11/03/2016
  - [AD] API to 1.2.0 + localized insurance items
  
