--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+Release 1.3.1 22/04/2016
+ - [AD] updates to samples and doc + API 1.3.0
+ 
 Release 1.3.0 12/04/2016
  - [AD] API to 1.3.0 (for parcel points details in quotations)
  
