--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+Release 1.3.1-2 26/04/2016
+ - [AD] API 1.3.1 (modified ListPoint for consistency)
+
 Release 1.3.1 22/04/2016
  - [AD] updates to samples and doc + API 1.3.0
  
