--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+Release 1.3.2 06/07/2016
+ - [AD] API 1.3.2 (for multiquotations)
+ 
 Release 1.3.1-2 26/04/2016
  - [AD] API 1.3.1 (modified ListPoint for consistency)
 
