--- a/changelog.txt
+++ b/changelog.txt
@@ -1,21 +1,26 @@
+Release 1.3.3 [TBD]
+ - [AB] Added User Signup
+ - [AB] Updated EMC/Classes
+ - [AB] Updated code samples
+ - [AB] Updated README.md
 Release 1.3.2 06/07/2016
  - [AD] API 1.3.2 (for multiquotations)
- 
+
 Release 1.3.1-2 26/04/2016
  - [AD] API 1.3.1 (modified ListPoint for consistency)
 
 Release 1.3.1 22/04/2016
  - [AD] updates to samples and doc + API 1.3.0
- 
+
 Release 1.3.0 12/04/2016
  - [AD] API to 1.3.0 (for parcel points details in quotations)
- 
+
 Release 1.2.0 11/03/2016
  - [AD] API to 1.2.0 + localized insurance items
- 
+
 Release 1.1.7 22/02/2016
  - [AD] Added carrier translation
- 
+
 Release 1.1.6 26/01/2016
  - [AD] Fixed examples and index, updated library with setLocale
 
