--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,12 @@
+Release 1.3.4 TBD
+ - [AD] #3545 saturday delivery
+
 Release 1.3.3 25/07/2016
  - [AB] Added User Signup
  - [AB] Updated EMC/Classes
  - [AB] Updated code samples
  - [AB] Updated README.md
+
 Release 1.3.2 06/07/2016
  - [AD] API 1.3.2 (for multiquotations)
 
