--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 Release 1.3.4 TBD
  - [AD] #3545 saturday delivery
+ - [AD] Fix for locale on account creation
 
 Release 1.3.3 25/07/2016
  - [AB] Added User Signup
