--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 Release 1.3.4 TBD
  - [AD] #3545 saturday delivery
  - [AD] Fix for locale on account creation
+ - [AD] #3770 Added function for key generation
 
 Release 1.3.3 25/07/2016
  - [AB] Added User Signup
