--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,4 @@
-Release 1.3.4 TBD
+Release 1.3.4 31/08/2016
  - [AD] #3545 saturday delivery
  - [AD] Fix for locale on account creation
  - [AD] #3770 Added function for key generation
