--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+Release 1.3.5 TBD
+ - [AD] #3811bis cleanup and replaced boxtale by boxtal
+ 
 Release 1.3.4 31/08/2016
  - [AD] #3545 saturday delivery
  - [AD] Fix for locale on account creation
