--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 Release 1.3.5 TBD
  - [AD] #3811bis cleanup and replaced boxtale by boxtal
- - [TS] Added the is_ue field in Country->getCountries.
+ - [TS] Added the is_ue and states fields in Country->getCountries.
  
 Release 1.3.4 31/08/2016
  - [AD] #3545 saturday delivery
