--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+Release 1.3.6 TBD
+ - [AD] #4116 added document download function & sample
+ 
 Release 1.3.5 17.11/2016
  - [AD] #3811bis cleanup and replaced boxtale by boxtal
  - [TS] Added the is_ue and states fields in Country->getCountries.
