--- a/changelog.txt
+++ b/changelog.txt
@@ -1,10 +1,10 @@
-Release 1.3.6 TBD
+Release 1.3.6 24/05/2017
  - [AD] #4116 added document download function & sample
  - [AD] #4096 added carrier cgv iframe
  - [AD] fix for php7
  - [AD] replaced return.xml by last_request variable
  
-Release 1.3.5 17.11/2016
+Release 1.3.5 17/11/2016
  - [AD] #3811bis cleanup and replaced boxtale by boxtal
  - [TS] Added the is_ue and states fields in Country->getCountries.
  - [BD] No longer throw a fatal error if the server is not accessible
