--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+Release 1.3.7 19/09/2023
+ - [AD] removed deprecated and unused methods
+
 Release 1.3.6 24/05/2017
  - [AD] #4116 added document download function & sample
  - [AD] #4096 added carrier cgv iframe
